JGraphT 1.5.0 Comply